# DiscordMassRedact

./: Cargo.toml  README.md
.github/workflows/: release.yml  rust-multi-platform-build.yml
src/: channels.rs  cli.rs  continuation.rs  discord.rs  edit_message.rs  emojis.rs  extract.rs  extract_message_ids.rs  main.rs  redact.rs  shakespeare.rs  user_agents.rs  wordlist.rs  words.txt
