[package]
name = "discord-mass-redact"
version = "0.2.0"
edition = "2024"

[dependencies]
colored = "3.0.0"
dotenv = "0.15.0"
rand = "0.9.1"
reqwest = { version = "0.12.17", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
url = "2.5.4"
