[package]
name = "discord-mass-redact"
version = "1.1.2"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
rand = "0.9.1"
reqwest = { version = "0.12.17", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.15.1"
url = "2.5.4"
